todo-service/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: todo-app
  labels:
    app: todo-app
    dynatrace.com/inject: "true"
