todo-service/k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-service
  namespace: todo-app
  labels:
    app: todo-service
spec:
  selector:
    app: todo-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30080
  # NodePort exposes the service on each node's IP - accessible via minikube ip
  type: NodePort
